--- a/ss11_vong_lap_2/bai_tap/bai_6_tinh_tong_cua_30_so_chia_het_cho_7.html
+++ b/ss11_vong_lap_2/bai_tap/bai_6_tinh_tong_cua_30_so_chia_het_cho_7.html
@@ -7,14 +7,13 @@
 <body>
 </body>
 <script>
-    let text=''
-    let a=0
-    let sum=0;
-    for (let i=0; i<30 ;i++ ){
+    let a = 0;
+    let sum = 0;
+    for (let i = 0; i < 30; i++) {
         a += 7;
-        sum+=a;
+        sum += a;
     }
-    document.write(sum+'<br>');
+    document.write(sum + '<br>');
 
 </script>
 </html>
