--- a/ss11_vong_lap_2/bai_tap/vong_lap_2_bai_4_hinh_chu_nhat.html
+++ b/ss11_vong_lap_2/bai_tap/vong_lap_2_bai_4_hinh_chu_nhat.html
@@ -8,19 +8,19 @@
 <script>
     let chieuDai = '';
     let chieuDaiRong = '';
-    for (let i = 0; i < 5; i++) {
+    for (let i = 0; i < 20; i++) {
         chieuDai += '*';
-        if (i === 0 || i === 4) {
+        if (i === 0 || i === 19) {
             chieuDaiRong += '*';
         } else {
-            chieuDaiRong = '';
+            chieuDaiRong += '&nbsp;&nbsp;';
         }
     }
     for (let j = 0; j < 5; j++) {
         if (j === 0 || j === 4) {
-            document.write(chieuDai);
+            document.write(chieuDai+'<br>');
         } else {
-            document.write(chieuDaiRong);
+            document.write(chieuDaiRong+'<br>');
         }
     }
 </script>
