--- a/ss11_vong_lap_2/bai_tap/bai_7_fizz_buzz.html
+++ b/ss11_vong_lap_2/bai_tap/bai_7_fizz_buzz.html
@@ -8,21 +8,18 @@
 
 </body>
 <script>
-    for (i = 1; i <= 100; i++) {
+    for (let i = 1; i <= 100; i++) {
         if (i % 3 === 0 && i % 5 === 0) {
             document.write('FizzBuzz' + '<br>');
-        }
-        else {
+        } else {
             if (i % 3 === 0) {
                 document.write('Fizz' + '<br>');
-            }
-            else if(i%5===0){
-                document.write('Buzz' + '<br>')
-            }
-            else {
-                document.write(i+'<br>')
+            } else if (i % 5 === 0) {
+                document.write('Buzz' + '<br>');
+            } else {
+                document.write(i + '<br>');
             }
         }
-        }
+    }
 </script>
 </html>
