--- a/ss11_vong_lap_2/bai_tap/vong_lap_2_bai_2_tinh_giai_thua.html
+++ b/ss11_vong_lap_2/bai_tap/vong_lap_2_bai_2_tinh_giai_thua.html
@@ -8,7 +8,7 @@
 
 </body>
 <script>
-    let num = +prompt('Nhập 1 số')
+    let num = +prompt('Nhập 1 số');
     let multi = 1;
     if (num % 1 === 0) {
         for (let i = 1; i <= num; i++) {
