--- a/ss12_array/bai_tap/luyen_tap_mang_1/bai_7_.html
+++ b/ss12_array/bai_tap/luyen_tap_mang_1/bai_7_.html
@@ -23,7 +23,7 @@
             document.write("Số V là " + numV + '<br>');
             document.write("Mảng sau khi loại số V là " + arr);
             break;
-        } else if (numV > arr.length) {
+        } else if (arr[i] > arr.length) {
             document.write("V is not in the array");
             break;
         }
