--- a/ss12_array/bai_tap/luyen_tap_mang_1/bai_6_.html
+++ b/ss12_array/bai_tap/luyen_tap_mang_1/bai_6_.html
@@ -16,14 +16,15 @@
         }
     }
     let numV = +prompt('nhập V');
-    for (let i = 0; i < arr.length; i++) {
-        if (numV === arr[i]) {
+    let j = 0;
+    for ( j = 0; j < arr.length; j++) {
+        if (numV === arr[j]) {
             document.write("V is in the array");
             break;
-        } else if (numV > arr.length) {
-            document.write("V is not in the array");
-            break;
         }
+    }
+    if (j === arr.length) {
+        document.write("V is not in the array");
     }
 
 </script>
