--- a/ss13_array_2/bai_tap/bai_4.html
+++ b/ss13_array_2/bai_tap/bai_4.html
@@ -10,7 +10,7 @@
 <script>
     let str = prompt('nhập vào 1 chuỗi');
     let arr = str.split(' ');
-    document.write('chuỗi là ' + str + '<br>');
-    document.write('Số từ trong mảng là ' + arr.length);
+    document.write('Chuỗi là ' + str);
+    document.write('Số từ trong chuỗi là ' + arr.length);
 </script>
 </html>
