--- a/ss13_array_2/bai_tap/bai_9.html
+++ b/ss13_array_2/bai_tap/bai_9.html
@@ -10,7 +10,7 @@
 <script>
     let arrA = [];
     let arrB = [];
-    let arrC = [];
+    let arrC;
     let i = 0;
     while (i < 20) {
         let num = prompt('nhập số 1 số ');
