--- a/ss14_ham_1/bai_tap/ham_1_bai_5.html
+++ b/ss14_ham_1/bai_tap/ham_1_bai_5.html
@@ -11,7 +11,7 @@
 <script>
     let star = ['Polaris', 'Aldebaran', 'Deneb', 'Vega', 'Altair', 'Dubhe', 'Regulus'];
     let groupStar = ['Ursa Minor', 'Tarurus', 'Cygnus', 'Lyra', 'Aquila', 'Ursa Major', 'Leo'];
-    let nameStar = prompt('Nhập ngôi sao bạn cần tìm')
+    let nameStar = prompt('Nhập ngôi sao bạn cần tìm');
 
     function findConstellation(name) {
         let i = 0;
