--- a/ss13_array_2/bai_tap/bai_3.html
+++ b/ss13_array_2/bai_tap/bai_3.html
@@ -13,7 +13,7 @@
     let i = 0;
     do {
         let a = prompt('nhập vào ký tự thứ ' + (i + 1));
-        if (a.length < 2) {
+        if (a.length === 1) {
             arr.push(a);
             i++;
         }
