--- a/ss13_array_2/bai_tap/bai_4.html
+++ b/ss13_array_2/bai_tap/bai_4.html
@@ -10,7 +10,13 @@
 <script>
     let str = prompt('nhập vào 1 chuỗi');
     let arr = str.split(' ');
-    document.write('Chuỗi là ' + str);
-    document.write('Số từ trong chuỗi là ' + arr.length);
+    let count = 0;
+    for (let i = 0; i < arr.length; i++) {
+        if (isNaN(arr[i]) === false) {
+            continue;
+        }
+        count++;
+    }
+    document.write(count);
 </script>
 </html>
