--- a/ss15_ham_2/bai_tap/ham_2_bai_3.html
+++ b/ss15_ham_2/bai_tap/ham_2_bai_3.html
@@ -16,7 +16,7 @@
         for (let i = 1; i <= number; i++) {
             multi *= i;
         }
-        document.getElementById('result').innerHTML = 'Giai thừa là'+multi;
+        document.getElementById('result').innerHTML = 'Giai thừa của ' + number + ' là ' + multi;
     }
 </script>
 </html>
