--- a/ss15_ham_2/bai_tap/ham_2_bai_6.html
+++ b/ss15_ham_2/bai_tap/ham_2_bai_6.html
@@ -8,7 +8,7 @@
 
 </body>
 <script>
-    let num = +prompt();
+    let num = +prompt('nhập 1 số');
     testNumber(num);
 
     function testNumber(x) {
