--- a/ss16_doi_tuong/bai_tap/lop_thay_doi_nhiet_do.html
+++ b/ss16_doi_tuong/bai_tap/lop_thay_doi_nhiet_do.html
@@ -14,7 +14,7 @@
             this.c = c;
         }
 
-        CToF() {
+        cToF() {
             if (this.c >= -273) {
                 let f = this.c * 9 / 5 + 32;
                 document.write('Độ C chuyển sang độ F: ' + f + '<br>');
@@ -23,7 +23,7 @@
             }
         }
 
-        CtoK() {
+        cToK() {
             if (this.c >= -273) {
                 let k = this.c + 273.15;
                 document.write('Độ C chuyển sang độ K: ' + k + '<br>');
@@ -34,8 +34,8 @@
     }
 
     let temperature = new Temperature(+prompt('nhập nhiệt độ hiện tại'));
-    temperature.CToF();
-    temperature.CtoK();
+    temperature.cToF();
+    temperature.cToK();
 
 </script>
 </html>
