--- a/ss16_doi_tuong/bai_tap/lop_thay_doi_nhiet_do.html
+++ b/ss16_doi_tuong/bai_tap/lop_thay_doi_nhiet_do.html
@@ -14,28 +14,18 @@
             this.c = c;
         }
 
-        cToF() {
+        fromCToFAndK() {
             if (this.c >= -273) {
                 let f = this.c * 9 / 5 + 32;
-                document.write('Độ C chuyển sang độ F: ' + f + '<br>');
-            } else {
-                alert('Giá trị nhập vào không thoả mãn (là kí tự hoặc bé hơn -273)');
-            }
-        }
-
-        cToK() {
-            if (this.c >= -273) {
                 let k = this.c + 273.15;
-                document.write('Độ C chuyển sang độ K: ' + k + '<br>');
+                return 'Giá trị đổi sang độ F: ' + f + '<br>' + 'Giá trị đổi sang độ F: ' + k;
             } else {
-                alert('Giá trị nhập vào không thoả mãn (là kí tự hoặc bé hơn -273)');
+                return 'Giá trị nhập vào không thoả mãn (là kí tự hoặc bé hơn -273)';
             }
         }
     }
 
     let temperature = new Temperature(+prompt('nhập nhiệt độ hiện tại'));
-    temperature.cToF();
-    temperature.cToK();
-
+    document.write(temperature.fromCToFAndK());
 </script>
 </html>
