--- a/ss12_array/bai_tap/luyen_tap_mang_1/bai_6_.html
+++ b/ss12_array/bai_tap/luyen_tap_mang_1/bai_6_.html
@@ -16,7 +16,7 @@
         }
     }
     let numV = +prompt('nhập V');
-    let j = 0;
+    let j;
     for (j = 0; j < arr.length; j++) {
         if (numV === arr[j]) {
             document.write("V is in the array");
