--- a/ss12_array/bai_tap/luyen_tap_mang_1/bai_8_.html
+++ b/ss12_array/bai_tap/luyen_tap_mang_1/bai_8_.html
@@ -17,8 +17,10 @@
             i++;
         }
     }
-    document.write('Mảng sau khi nhập là '+arr+"<br>");
-    arr.sort(function (a, b) {return a - b});
-    document.write('Mảng sau khi sắp xếp là '+arr);
+    document.write('Mảng sau khi nhập là ' + arr + "<br>");
+    arr.sort(function (a, b) {
+        return a - b;
+    });
+    document.write('Mảng sau khi sắp xếp là ' + arr);
 </script>
 </html>
