--- a/case_study/task_4/bai_2.html
+++ b/case_study/task_4/bai_2.html
@@ -8,7 +8,7 @@
 
 </body>
 <script>
-    let str = 'fjsdnlkasjskasbdljasdfb';
+    let str = prompt('Nhập chuỗi');
     let arr = [];
     for (let i = 0; i < str.length; i++) {
         if (!arr.includes(str[i])) {
