--- a/case_study/task_4/bai_1.html
+++ b/case_study/task_4/bai_1.html
@@ -8,21 +8,52 @@
 
 </body>
 <script>
-    str = 'tRuong TaN   HAI';
+    let str = prompt('Nhập chuỗi');
+    document.write('Chuỗi nhập vào là: ' + str + '<br>');
+    document.write('Chuỗi sau khi được sửa là: ' + changeStr(str) + '<br>');
+    document.write('Từ dài nhất trong chuỗi là: ' + findLongestWord(changeStr(str)));
 
-    function handleStr(str) {
+    function changeStr(str) {
         let arr = str.split(' ');
-        for (let i = 0; i < arr.length; i++) {
-            if (arr[i] === ' '){
-                continue;
-            }else {
-
+        let arrNew = [];
+        let i = 0;
+        while (i < arr.length) {
+            if (arr[i] === '') {
+                arr.splice(i, 1);
             }
+            i++;
         }
-        return arr
+        for (let i = 0; i < arr.length; i++) {
+            let arr1 = arr[i].split('');
+            for (let j = 0; j < arr1.length; j++) {
+                if (j === 0) {
+                    arr1[j] = arr1[j].toUpperCase();
+                } else {
+                    arr1[j] = arr1[j].toLowerCase();
+                }
+            }
+            arrNew.push(arr1.join(''));
+        }
 
+        return arrNew.join(' ');
     }
 
-    console.log(handleStr(str))
+    function findLongestWord(str) {
+        let arr = str.split(' ');
+        let maxLength = arr[0].length;
+        let text = ''
+        for (let i = 0; i < arr.length; i++) {
+            if (maxLength < arr[i].length) {
+                maxLength = arr[i].length;
+            }
+        }
+        for (let i = 0; i < arr.length; i++) {
+            if (arr[i].length === maxLength) {
+                text += arr[i] + ', ';
+            }
+        }
+        return text;
+    }
+
 </script>
 </html>
