--- a/case_study/task_5/bai_1.html
+++ b/case_study/task_5/bai_1.html
@@ -2,12 +2,39 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tính tổng các số chẵn trong ma trận</title>
 </head>
 <body>
 
 </body>
 <script>
+    let m = +prompt('nhập số hàng');
+    let n = +prompt('nhập số cột');
+    document.write('Tổng các số chẵn trong ma trận là: '+calculator(checkArr(m, n)));
+
+    function checkArr(m, n) {
+        let arr = new Array(n)
+        for (let i = 0; i < m; i++) {
+            arr[i] = new Array(m);
+            for (let j = 0; j < n; j++) {
+                arr[i][j] = +prompt('nhập giá trị');
+            }
+        }
+        return arr;
+    }
+
+    function calculator(arr) {
+        let sum = 0;
+        for (let i = 0; i < arr.length; i++) {
+            for (let j = 0; j < arr[i].length; j++) {
+                if (arr[i][j] % 2 === 0) {
+                    sum += arr[i][j];
+                }
+            }
+        }
+        return sum;
+    }
+
 
 </script>
 </html>
