--- a/case_study/task_1/tinh _thue_thu_nhap_va_luong_rong.html
+++ b/case_study/task_1/tinh _thue_thu_nhap_va_luong_rong.html
@@ -22,7 +22,7 @@
                 return wage * 0.2;
             }
         } else {
-            alert('Nhập sai (lương phải là số và lớn hơn 0 ');
+            alert('Nhập sai (lương phải là số và lớn hơn 0) ');
         }
     }
 
