--- a/case_study/task_3/bai_3.html
+++ b/case_study/task_3/bai_3.html
@@ -12,7 +12,7 @@
     let denominators = [6, 3, 4, 2, 5];
     let arr = [];
     for (let i = 0; i < numerators.length; i++) {
-        arr.push(numerators[i] / denominators[i])
+        arr.push(numerators[i] / denominators[i]);
     }
     let max = arr[0];
     for (let i = 0; i < arr.length; i++) {
