--- a/case_study/task_3/bai_4.html
+++ b/case_study/task_3/bai_4.html
@@ -17,7 +17,7 @@
             '  4. Nước ép cà chua\n' +
             '  5. Nước lọc\n' +
             '  6. Nước dừa\n' +
-            '  7. Cancel')
+            '  7. Cancel');
         if (num !== 7) {
             let a = +prompt('nhập số lượng');
             for (let i = 0; i < arr1.length; i++) {
@@ -26,11 +26,11 @@
                 }
             }
         } else {
-            flag = false
+            flag = false;
             break;
         }
-    } while (flag)
-    document.write('Tổng tiền phải trả: ' + sum)
+    } while (flag);
+    document.write('Tổng tiền phải trả: ' + sum);
 </script>
 </body>
 </html>
