--- a/case_study/task_4/bai_1.html
+++ b/case_study/task_4/bai_1.html
@@ -41,7 +41,7 @@
     function findLongestWord(str) {
         let arr = str.split(' ');
         let maxLength = arr[0].length;
-        let text = ''
+        let text = '';
         for (let i = 0; i < arr.length; i++) {
             if (maxLength < arr[i].length) {
                 maxLength = arr[i].length;
