--- a/case_study/task_4/bai_3.html
+++ b/case_study/task_4/bai_3.html
@@ -18,7 +18,7 @@
     for (let i = 0; i < arr1.length; i++) {
         for (let j = 0; j < arr2.length; j++) {
             if (arr1[i] === arr2[j]) {
-                arr2.splice(j, 1)
+                arr2.splice(j, 1);
                 count++;
                 break;
             }
