--- a/case_study/task_5/liet_ke_so_nguyen_to.html
+++ b/case_study/task_5/liet_ke_so_nguyen_to.html
@@ -9,14 +9,32 @@
 </body>
 <script>
     let arr = [[1, 2, 3], [4, 5, 6], [7, 8, 9]];
+    let arrNew = [];
+    document.write('Số nguyên tố có trong mảng là: ' + listPrime(arr) + '<br>');
+    document.write('Có ' + arrNew.length + ' số nguyên tố ở trong mảng');
+
+    function listPrime(arr) {
+        for (let i = 0; i < arr.length; i++) {
+            for (let j = 0; j < arr[i].length; j++) {
+                if (checkPrime(arr[i][j])) {
+                    arrNew.push(arr[i][j]);
+                }
+            }
+        }
+        return arrNew;
+    }
 
     function checkPrime(num) {
-        let flag = false;
-        for (let i = 2; i < num; i++) {
-            if(num%2 === 0){
-                flag === true;
-                break;
+        let count = 0;
+        for (let i = 2; i <= num; i++) {
+            if (num % i === 0) {
+                count++;
             }
+        }
+        if (count === 1) {
+            return true;
+        } else {
+            return false;
         }
     }
 </script>
