--- a/ss5_form_table/bai_tap/tao_form_lay_survey_khach_hang.html
+++ b/ss5_form_table/bai_tap/tao_form_lay_survey_khach_hang.html
@@ -45,10 +45,10 @@
             <option value="100000+">100000+</option>
         </select><br><br>
         <b>Gender Identity</b><br>
-        <label><input name="sex" value="male" type="radio">Male</label><br>
-        <label><input name="sex" value="female" type="radio">Female</label><br>
-        <label><input name="sex" value="nonbinary" type="radio">Nonbinary</label><br>
-        <label><input name="sex" value="other" type="radio">Other</label><br>
+        <label><input name="gender" value="male" type="radio">Male</label><br>
+        <label><input name="gender" value="female" type="radio">Female</label><br>
+        <label><input name="gender" value="nonbinary" type="radio">Nonbinary</label><br>
+        <label><input name="gender" value="other" type="radio">Other</label><br>
         <input type="text"><br><br>
         <b>Which of the following products have your purchased in the last 2 months. Please check all that apply.</b><br>
         <label><input name="Product" value="Product1" type="checkbox">Product1</label><br>
