--- a/case_study/task_5/bai_1.html
+++ b/case_study/task_5/bai_1.html
@@ -10,9 +10,9 @@
 <script>
     let m = +prompt('nhập số hàng');
     let n = +prompt('nhập số cột');
-    document.write('Tổng các số chẵn trong ma trận là: ' + calculatorSum(checkArr(m, n)));
+    document.write('Tổng các số chẵn trong ma trận là: ' + calculatorSum(enterArr(m, n)));
 
-    function checkArr(m, n) {
+    function enterArr(m, n) {
         let arr = new Array(n);
         for (let i = 0; i < m; i++) {
             arr[i] = new Array(m);
