--- a/case_study/task_5/liet_ke_so_nguyen_to.html
+++ b/case_study/task_5/liet_ke_so_nguyen_to.html
@@ -8,7 +8,7 @@
 
 </body>
 <script>
-    let arr = [[1, 2, 3], [4, 5, 6], [7, 8, 9]];
+    let arr = [[1, 2, 3], [4, 5, 6], [7, 8, 9,]];
     let arrNew = [];
     document.write('Số nguyên tố có trong mảng là: ' + listPrime(arr) + '<br>');
     document.write('Có ' + arrNew.length + ' số nguyên tố ở trong mảng');
@@ -26,12 +26,13 @@
 
     function checkPrime(num) {
         let count = 0;
-        for (let i = 2; i <= num; i++) {
+        for (let i = 2; i < num; i++) {
             if (num % i === 0) {
                 count++;
+                break;
             }
         }
-        if (count === 1) {
+        if (count === 0) {
             return true;
         } else {
             return false;
