--- a/bai_tap_lam_them/phan_1/bai_7.html
+++ b/bai_tap_lam_them/phan_1/bai_7.html
@@ -29,10 +29,10 @@
 
     function checkArr(arr) {
         for (let i in arr) {
-            for (let j =0; j<arr) {
+            for (let j = 0; j < arr; j++) {
                 if (arr[i][j] < arr[i][j + 1]) {
                     arrOut.push(arr[i]);
-                    // console.log(arr[i]);
+
                 }
             }
         }
