--- a/case_study/task_6/quan_li_hoc_vien.html
+++ b/case_study/task_6/quan_li_hoc_vien.html
@@ -130,6 +130,7 @@
                 arr[i].setDates(dates);
                 let module = prompt('Nhập module');
                 arr[i].setModule(module);
+                break;
             }
         }
         display();
